--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="tab_navigation">Navigazione tra cartelle e playlist</string>
 
     <!-- Search -->
-    <string name="search_songs">Cerca canzoni, artisti, album...</string>
+    <string name="search_songs">Cerca canzoni, artisti, album…</string>
     <string name="close_search">Chiudi ricerca</string>
     <string name="no_search_results">Nessun risultato trovato</string>
     <string name="search_results_format">%d risultati per "%s"</string>
